# rogue

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  README.md  Taskfile.yml  augment-path.ps1  backend-test.c  build.bat  commands.txt  core.dot  graph.dot  invoc.bat
backend/: CMakeLists.txt  backend.c  backend.h
backend/stb_image/: CMakeLists.txt
core/: CMakeLists.txt  ascii.cc  ascii.h  core.cc  core.h  formatters.h  grid.h  logging.cc  logging.h  math.cc  math.h  screen.h  services.cc  services.h  tests.cc  util.h  world.cc  world.h
core/common/: formatters.h  grid.h  math.cc  services.cc
core/common/tests/: tests.h
core/core/: ascii.cc  context.h  core.cc  core.h  screen.h
core/game/: world.cc  world.h
core/generation/: room-generation.cc  room-generation.h
core/tests/: unit-tests.cc
cxx_std/: CMakeLists.txt
demos/: CMakeLists.txt
demos/basic-backend-integration/: main.c
demos/pathfinding/: main.cc
gdb/: printers.py
samples/: CMakeLists.txt
samples/backend-test/: backend-test.c
scripts/: reformat-compile-database.py
test-platform/: CMakeLists.txt  test-platform.cc  test-platform.h
